# ika

./: .eslintignore  .gitignore  CLAUDE.md  Cargo.toml  EPOCH_12_WEDGE_ANALYSIS.md  PR-1721-action-plan.md  Pub.localnet.toml  README.md  eslint.config.mjs  ika_sui_config.yaml  mainnet.json  package.json  pnpm-lock.yaml  pnpm-workspace.docs.yaml  pnpm-workspace.yaml  prettier.config.js  turbo.json
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: consensus-reviewer.md
.claude/hooks/: git-guard.sh
.github/: PUBLISHING-RELEASE.md  PUBLISHING-SDK.md  PUBLISHING-SKILLS.md  labeler.yml
.github/ISSUE_TEMPLATE/: doc-bug.md
.github/workflows/: binary-build.yaml  build-and-push-binaries.yaml  build-binaries.yaml  ci.yaml  cli-integration-tests-ci.yaml  cli-release.yaml  deploy-docs.yaml  docker-ci-pull-push.yaml  docker-ci.yaml  ika-node-docker.yaml  ika-notifier-docker.yaml  ika-proxy-docker.yaml  integration-tests-ci.yaml  labeler.yml  move-formatter.yaml  publish-skills.yaml  publish-typescript-sdk.yml  release.yaml  scheduled-all-suites.yaml  simtest.yaml  stale.yml  system-tests-ci.yaml  system-tests-docker.yaml  test-cluster.yaml  ts-ci.yaml  ts-integration-tests.yaml
contracts/: .prettierrc
contracts/ika/: Move.toml
contracts/ika_common/: Move.toml
contracts/ika_dwallet_2pc_mpc/: Move.toml
contracts/ika_system/: Move.toml
crates/committee_party_check/: Cargo.toml
crates/dwallet-classgroups-types/: Cargo.toml
crates/dwallet-classgroups-types/src/: lib.rs
crates/dwallet-mpc-centralized-party/: Cargo.toml
crates/dwallet-mpc-types/: Cargo.toml
crates/ika/: Cargo.toml  README.md
crates/ika-core/: Cargo.toml
crates/ika-move-contracts/: Cargo.toml
crates/ika-move-contracts/src/: lib.rs
crates/ika-network/: Cargo.toml  build.rs
crates/ika-node/: Cargo.toml
crates/ika-protocol-config/: Cargo.toml
crates/ika-proxy/: Cargo.toml
crates/ika-sdk/: Cargo.toml
crates/ika-solana-signer/: Cargo.toml
crates/ika-solana-signer/src/: config.rs  error.rs  flow.rs  lib.rs  pubkey.rs  signer.rs
crates/ika-solana-signer/tests/: testnet_integration.rs
crates/ika-sui-client/: Cargo.toml
crates/ika-sui-client/src/: anchor.rs  grpc.rs  grpc_backend.rs  ika_dwallet_transactions.rs  ika_protocol_transactions.rs  ika_validator_transactions.rs  lib.rs  metrics.rs  transport.rs
crates/ika-sui-client/src/dwallet_signer/: coin.rs  common.rs  encryption.rs  metadata.rs  mod.rs  network_key.rs  presign.rs  sign_session.rs  tx.rs
crates/ika-sui-client/tests/: anchor_localnet.rs
crates/ika-swarm-config/: Cargo.toml
crates/ika-test-cluster/: Cargo.toml
crates/ika-test-cluster/move-stub/: Move.toml
crates/ika-test-cluster/move-stub/sources/: stub.move
crates/ika-test-cluster/src/: lib.rs
crates/ika-test-cluster/tests/: cluster_boots.rs  epoch_boundary_presign_traffic.rs  joiner.rs  multi_network_key_dkg.rs  ocs_verifier.rs  off_chain_metadata.rs  protocol_version_transition.rs  restart_mid_grace.rs  smoke.rs  vss.rs
crates/ika-types/: Cargo.toml
crates/ika-upgrade-test/: Cargo.toml  HANDOFF.md
crates/ika-upgrade-test/src/: binary.rs  cluster.rs  lib.rs  mpc_timings.rs  process.rs  scenario.rs  sui.rs  workload.rs
crates/ika-upgrade-test/tests/: cross_binary.rs  smoke.rs  v118_upgrade.rs  workload.rs
crates/message-digest/: Cargo.toml
deployed_contracts/mainnet/: address.yaml
deployed_contracts/testnet/: address.yaml
dev-docs/: README.md
dev-docs/conventions/: dead-code-cleanup.md  metrics.md  simtest.md  sui-version-bump.md
dev-docs/learnings/: pitfalls.md
dev-docs/plans/: 1742-mpc-data-carry-forward.md  README.md
dev-docs/playbooks/: ci-suites.md  localnet.md  mpc-stall-postmortem.md  production-alerts.md
dev-docs/reference/: sui-upstream.md
dev-docs/reviews/: README.md
dev-docs/specs/: README.md  epoch-close-session-lock.md  handoff.md  ocs-verified-sui-reads.md  validator-mpc-data-announcements.md
docker/builder/: Dockerfile
docker/fullnode/: README.md  docker-compose.yaml
docker/fullnode-x/: README.md  docker-compose.yaml
docker/grafana-local/: docker-compose.yaml  prometheus.yaml
docker/ika-network/: README.md  docker-compose-antithesis.yaml  docker-compose.yaml  new-genesis.sh
docker/ika-node/: Dockerfile  build.sh
docker/ika-node-deterministic/: README.md
docker/ika-proxy/: Dockerfile  build.sh
docker/jaeger-local/: docker-compose.yaml
docs/: PLAN-v2-keys-upgrade.md  breaking-changes-inkrypto-to-main.md  bun.lockb  cross-binary-upgrade-testing-proposal.md  cross-binary-upgrade-testing-results.md  cross-binary-upgrade-testing.md  direct-signature-query-implementation.md  docusaurus.config.ts  inkrypto-bump-diff.md  mdx-components.tsx  next.config.mjs  off-chain-metadata-v2-review.md  package-lock.json  package.json  plan-backward-compat-mainnet-v1.1.8.md  plan-bump-crypto-private-to-main.md  plan-fast-schnorr.md  plan-update-crypto-latest.md  pnpm-lock.yaml  sidebars.ts  tailwind.config.ts  upstream-cryptography-private-bwd-compat-reconfig-from-bwd-compat-dkg.diff
docs/app/: global.css  layout.config.tsx  layout.tsx
docs/components/: ArchitectureDiagram.tsx  InfoBox.tsx  Prerequisites.tsx  SolanaBanner.tsx
docs/lib/: source.ts
docs/public/: _redirects
examples/: README.md
examples/keyspring/: README.md
examples/multisig-bitcoin/: README.md
nre/ika-genesis/: README.md  deploy-secrets-and-update-terraform.sh
packaging/homebrew/: ika.rb
scripts/: check-metric-names.sh  check-sui-version-consistency.sh  metric-name-allowlist.txt  rerun_ika_debug.sh  rerun_ika_error.sh  rerun_ika_info.sh  rerun_ika_warn.sh
scripts/simtest/: cargo-simtest
sdk/: README.md
sdk/build-scripts/: package.json
sdk/core/: README.md  package.json  tsconfig.json  vitest.config.ts
sdk/ika-wasm/: Cargo.toml  benchmark-server.mjs  benchmark.html  index.js  index.mjs  package.json  run-benchmark.mjs
sdk/ika-wasm/.cargo/: config.toml
sdk/ika-wasm/src/: lib.rs
sdk/mpc-wasm/: package.json
sdk/ows/: README.md  package.json  sui-codegen.config.ts  (+1 more)
skills/: README.md
specs/: README.md
(+1011 files in other folders)
