[package]
name = "ika-move-contracts"
version = "0.1.0"
edition = "2024"
authors = ["dWallet Labs, Ltd. <dev@dwalletlabs.com>"]
description = "Sui Move packages"
license = "BSD-3-Clause-Clear"
publish = false

[dependencies]
anyhow.workspace = true
tempfile.workspace = true
include_directory = "0.1.1"
toml_edit.workspace = true