[package]
name = "ika-sdk"
version.workspace = true
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "BSD-3-Clause-Clear"
publish = false
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
jsonrpsee.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_json.workspace = true
futures-core.workspace = true
futures.workspace = true
tokio.workspace = true
bcs.workspace = true
thiserror.workspace = true
reqwest.workspace = true

ika-types.workspace = true
ika-config.workspace = true
shared-crypto.workspace = true
tracing.workspace = true
fastcrypto.workspace = true

# NOTE: It's important to keep the above dependency list short.
# This and the ika-json-rpc-api crate are widely used to develop on Ika and it's valuable
# to not have to pull in the entire ika repo for it.

[dev-dependencies]
tempfile.workspace = true
