[package]
name = "ika-solana-signer"
version.workspace = true
authors = ["dWallet Labs, Ltd. <dev@dwalletlabs.com>"]
license = "BSD-3-Clause-Clear"
publish = false
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bcs.workspace = true
hex.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true

fastcrypto.workspace = true

dwallet-mpc-centralized-party.workspace = true
dwallet-mpc-types.workspace = true
ika-config.workspace = true
ika-sui-client.workspace = true
ika-types.workspace = true

sui-json-rpc-types.workspace = true
sui-rpc-api.workspace = true
sui-sdk.workspace = true
sui-types.workspace = true
