[package]
name = "ika-sui-client"
version = "0.1.0"
authors = ["dWallet Labs, Ltd. <dev@dwalletlabs.com>"]
license = "BSD-3-Clause-Clear"
publish = false
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
async-trait.workspace = true
bcs.workspace = true
bytes.workspace = true
serde.workspace = true
itertools.workspace = true
prometheus.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "tracing", "test-util"] }
tracing.workspace = true

fastcrypto.workspace = true
move-core-types.workspace = true

shared-crypto.workspace = true
ika-config.workspace = true
ika-move-contracts.workspace = true
ika-types.workspace = true

sui-json-rpc-types.workspace = true
prost-types.workspace = true
sui-rpc-api.workspace = true
sui-sdk-types.workspace = true
sui-sdk.workspace = true
tonic.workspace = true
sui-types.workspace = true
backoff.workspace = true
dwallet-classgroups-types.workspace = true
sui.workspace = true
sui-keys.workspace = true
dwallet-mpc-types.workspace = true

[dev-dependencies]
ika-types = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
protocol-commands = []