[package]
name = "ika-test-cluster"
version.workspace = true
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "BSD-3-Clause-Clear"
publish = false
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bcs.workspace = true
cargo_metadata = "0.19"
fastcrypto.workspace = true
futures.workspace = true
rand = "0.8"
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true

dwallet-mpc-centralized-party.workspace = true
ika-config.workspace = true
ika-node = { path = "../ika-node", default-features = false }
ika-protocol-config.workspace = true
ika-sui-client.workspace = true
ika-swarm.workspace = true
ika-swarm-config.workspace = true
ika-types.workspace = true

sui-json-rpc-types.workspace = true
sui-keys.workspace = true
sui-sdk.workspace = true
sui-types.workspace = true
test-cluster.workspace = true

[target.'cfg(msim)'.dependencies]
sui-simulator.workspace = true

[dev-dependencies]
sui-macros.workspace = true
telemetry-subscribers.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
