[package]
name = "ika-upgrade-test"
version.workspace = true
authors = ["dWallet Labs <build@dwalletlabs.com>"]
license = "BSD-3-Clause-Clear"
publish = false
edition = "2024"

[lints]
workspace = true

[[bin]]
name = "upgrade-test"
path = "src/bin/upgrade-test.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
rand = "0.8"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
telemetry-subscribers.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true

dwallet-mpc-centralized-party.workspace = true
ika-config.workspace = true
ika-protocol-config.workspace = true
ika-sui-client.workspace = true
ika-swarm-config.workspace = true
ika-types.workspace = true

sui-config.workspace = true
sui-keys.workspace = true
sui-sdk.workspace = true
sui-types.workspace = true

[dev-dependencies]
telemetry-subscribers.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
