[package]
name = "dwallet-mpc-wasm"
authors = ["dWallet Labs, Ltd. <dev@dwalletlabs.com>"]
description = "Ika wasm bindings for dwallet MPC centralized party"
version = "0.2.0"
edition = "2024"
license = "BSD-3-Clause-Clear"
publish = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
# wasm-opt provides additional optimizations beyond LLVM
# Using -O4 for aggressive optimizations and -tnh for no-trapping float-to-int
wasm-opt = ["-O4", "-tnh"]

[features]
default = []
# Enable parallel processing with WASM threads (requires nightly + special build flags)
parallel = ["dwallet-mpc-centralized-party/parallel", "wasm-bindgen-rayon", "rayon"]

[dependencies]
dwallet-mpc-centralized-party = { path = "../../crates/dwallet-mpc-centralized-party", features = ["wasm_js"] }
anyhow = "1.0.100"
wasm-bindgen = "=0.2.100"
serde-wasm-bindgen = "0.6.5"
# Optional: WASM threading support
wasm-bindgen-rayon = { version = "1.2", optional = true }
rayon = { version = "1.10", optional = true }

[lib]
crate-type = ["cdylib", "rlib"]

[patch.crates-io]
crypto-bigint = { git = "https://github.com/ycscaly/crypto-bigint.git", rev = "8aabcee5" }
rfc6979 = { git = "https://github.com/RustCrypto/signatures", tag = "rfc6979/v0.5.0-rc.1" }
der = { git = "https://github.com/RustCrypto/formats", tag = "der/v0.8.0-rc.8" }